[gd_scene load_steps=23 format=3 uid="uid://d3i3lnbgey12t"]

[ext_resource type="PackedScene" uid="uid://cgy3g0ln4qwjp" path="res://Scenes/player/player.tscn" id="1_tt05s"]
[ext_resource type="PackedScene" uid="uid://c6ddeod3clnwv" path="res://Scenes/floors/1_lobby.tscn" id="2_44yaa"]
[ext_resource type="PackedScene" uid="uid://bfpny4cpk66h6" path="res://Scenes/floors/0_basement.tscn" id="2_o43cl"]
[ext_resource type="Script" path="res://Scenes/Floors.gd" id="2_r30v5"]
[ext_resource type="FontFile" uid="uid://c25dx12ryq4uf" path="res://Fonts/dogicapixel.ttf" id="2_upyyi"]
[ext_resource type="PackedScene" uid="uid://c2q1a12r1n0w6" path="res://Scenes/floors/3_executive.tscn" id="3_0ly1q"]
[ext_resource type="Script" path="res://Scenes/Important Info Ticker.gd" id="3_f48m0"]
[ext_resource type="PackedScene" uid="uid://dai1d0ek85n11" path="res://Scenes/floors/2_cube_farm.tscn" id="4_4xyus"]
[ext_resource type="PackedScene" uid="uid://b76o8i6k6ti4g" path="res://minimap/minimap.tscn" id="4_7jnv1"]
[ext_resource type="PackedScene" uid="uid://bsjyjb5jo0x08" path="res://Scenes/elevator/elevator.tscn" id="5_r8e04"]
[ext_resource type="PackedScene" uid="uid://cyawn4fsopql5" path="res://Scenes/escape menu/escape_menu.tscn" id="7_0khle"]
[ext_resource type="Script" path="res://Scenes/work_day_controller.gd" id="8_rgfby"]
[ext_resource type="Script" path="res://Scenes/room_sizer.gd" id="9_rb8vs"]
[ext_resource type="Script" path="res://Scenes/GameOver.gd" id="14_ant0h"]
[ext_resource type="FontFile" uid="uid://ce3om1rv7cdjs" path="res://Fonts/dogicapixelbold.ttf" id="15_enhuq"]

[sub_resource type="Theme" id="Theme_x08o5"]
default_font = ExtResource("2_upyyi")

[sub_resource type="Animation" id="Animation_u3pct"]
resource_name = "info"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.858489, -0.25, 0, 0.25, 0, -0.0215242, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.00663624, -0.25, 0, 0.25, 0, 0.851449, -0.25, 0, 0.25, 0, -0.0356044, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2.00436)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.87257, -0.796741, 0.0422407, 0.803259, -0.00704008, -0.0356044, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.996741, 2.00654)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(74.4364, -0.25, 0, 0.3, -49.9999, 12.5217, -1.5, -8.9943, 0.25, 0),
"times": PackedFloat32Array(0, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wsua1"]
_data = {
"info": SubResource("Animation_u3pct")
}

[sub_resource type="LabelSettings" id="LabelSettings_w232t"]
font = ExtResource("2_upyyi")
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.823529)
shadow_offset = Vector2(2, 2)

[sub_resource type="Animation" id="Animation_qwhys"]
resource_name = "work_day"
length = 300.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:activation_period")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(10, -0.25, 0, 36.7, 8.26912, 10, -87.1, 0.158523, 65.1, 5.95181, 7, -23.9, -0.317447, 32.1, 6.34483, 4, -50.5, -8.03502, 0.25, 0),
"times": PackedFloat32Array(0, 125.7, 219.1, 299.5)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CanvasLayer/Day UI/VBoxContainer/ClockRow/ProgressIndicator:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 105.9, 198.2, 262.7, 300),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.431373, 1, 0.8, 1), Color(0.905882, 0.921569, 0, 1), Color(0.803922, 0.45098, 0.0666667, 1), Color(0.345098, 0.203922, 0.0627451, 1), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:day_progress")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 300),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_32y22"]
_data = {
"work_day": SubResource("Animation_qwhys")
}

[sub_resource type="Theme" id="Theme_w2vym"]
default_font = ExtResource("15_enhuq")

[node name="The Office" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Minimap" parent="CanvasLayer/Control" node_paths=PackedStringArray("floor_controller") instance=ExtResource("4_7jnv1")]
z_index = 10
position = Vector2(-110, 65)
floor_controller = NodePath("../../../Floors")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -220.0
offset_top = 50.0
offset_bottom = 230.0
color = Color(0.129558, 0.129559, 0.129558, 0.533333)

[node name="Day UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_x08o5")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Day UI"]
layout_mode = 0
offset_right = 284.0
offset_bottom = 63.0
color = Color(0, 0, 0, 0.635294)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Day UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ClockRow" type="HBoxContainer" parent="CanvasLayer/Day UI/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Day UI/VBoxContainer/ClockRow"]
layout_mode = 2
text = "Work Day:"

[node name="ClockText" type="Label" parent="CanvasLayer/Day UI/VBoxContainer/ClockRow"]
layout_mode = 2

[node name="ProgressIndicator" type="ColorRect" parent="CanvasLayer/Day UI/VBoxContainer/ClockRow"]
layout_mode = 2
color = Color(0.431373, 1, 0.8, 1)

[node name="ActiveSpiritsRow" type="HBoxContainer" parent="CanvasLayer/Day UI/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Day UI/VBoxContainer/ActiveSpiritsRow"]
layout_mode = 2
text = "Open Work Orders:"

[node name="ActiveSpiritsNumber" type="Label" parent="CanvasLayer/Day UI/VBoxContainer/ActiveSpiritsRow"]
layout_mode = 2
text = "#"

[node name="ProgressRow" type="HBoxContainer" parent="CanvasLayer/Day UI/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Day UI/VBoxContainer/ProgressRow"]
layout_mode = 2
text = "Spirits Summoned:"

[node name="SummonedSpiritsNumber" type="Label" parent="CanvasLayer/Day UI/VBoxContainer/ProgressRow"]
layout_mode = 2
text = "0"

[node name="Slash" type="Label" parent="CanvasLayer/Day UI/VBoxContainer/ProgressRow"]
layout_mode = 2
text = "/"

[node name="TotalSpiritsNumber" type="Label" parent="CanvasLayer/Day UI/VBoxContainer/ProgressRow"]
layout_mode = 2
text = "0"

[node name="Important Info Ticker" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("3_f48m0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Important Info Ticker"]
libraries = {
"": SubResource("AnimationLibrary_wsua1")
}

[node name="Label" type="Label" parent="CanvasLayer/Important Info Ticker"]
modulate = Color(0, 0.00663624, 0, 0)
layout_mode = 2
offset_left = -176.0
offset_top = 74.4364
offset_right = -26.0
offset_bottom = 88.4364
text = "placeholder!"
label_settings = SubResource("LabelSettings_w232t")

[node name="Floors" type="Node2D" parent="."]
script = ExtResource("2_r30v5")
active_floor = 3

[node name="Executive Offices" parent="Floors" instance=ExtResource("3_0ly1q")]
position = Vector2(-186, -84)

[node name="Cube Farm" parent="Floors" instance=ExtResource("4_4xyus")]
position = Vector2(-357, -149)

[node name="Lobby" parent="Floors" instance=ExtResource("2_44yaa")]
position = Vector2(-373, -164)

[node name="Basement" parent="Floors" instance=ExtResource("2_o43cl")]
position = Vector2(-85, 26)

[node name="Elevator" parent="." instance=ExtResource("5_r8e04")]
position = Vector2(-181, -145)

[node name="Player Character" parent="." instance=ExtResource("1_tt05s")]
position = Vector2(-184, -80)

[node name="Camera2D" type="Camera2D" parent="Player Character"]
zoom = Vector2(2.75, 2.75)
limit_left = -390
limit_top = -190
limit_right = 255
limit_bottom = 205
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("9_rb8vs")

[node name="escape menu" parent="." instance=ExtResource("7_0khle")]

[node name="WorkDayController" type="Node" parent="." node_paths=PackedStringArray("floors_list_root", "player", "clock_label", "summoned_spirits_counter", "total_spirits_counter", "active_spirits_counter")]
script = ExtResource("8_rgfby")
floors_list_root = NodePath("../Floors")
player = NodePath("../Player Character")
clock_label = NodePath("../CanvasLayer/Day UI/VBoxContainer/ClockRow/ClockText")
summoned_spirits_counter = NodePath("../CanvasLayer/Day UI/VBoxContainer/ProgressRow/SummonedSpiritsNumber")
total_spirits_counter = NodePath("../CanvasLayer/Day UI/VBoxContainer/ProgressRow/TotalSpiritsNumber")
active_spirits_counter = NodePath("../CanvasLayer/Day UI/VBoxContainer/ActiveSpiritsRow/ActiveSpiritsNumber")

[node name="ActivationTimer" type="Timer" parent="WorkDayController"]
wait_time = 5.0
autostart = true

[node name="DifficultyAndTimeCurves" type="AnimationPlayer" parent="WorkDayController"]
libraries = {
"": SubResource("AnimationLibrary_32y22")
}
autoplay = "work_day"

[node name="GameOver" type="CanvasLayer" parent="."]
script = ExtResource("14_ant0h")

[node name="Control" type="Control" parent="GameOver"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_w2vym")

[node name="ColorRect" type="ColorRect" parent="GameOver/Control"]
layout_mode = 0
offset_left = -572.0
offset_top = -313.0
offset_right = 629.0
offset_bottom = 363.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -20.0
offset_right = 165.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="GameOver/Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.494118, 0.494118, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Congratulations, another day in the books!"

[node name="HBoxContainer" type="HBoxContainer" parent="GameOver/Control/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="GameOver/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.494118, 0.494118, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "You summoned"

[node name="NrSummoned" type="Label" parent="GameOver/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.494118, 0.494118, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "#"

[node name="Label4" type="Label" parent="GameOver/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.494118, 0.494118, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "out of"

[node name="NrTotal" type="Label" parent="GameOver/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.494118, 0.494118, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "#"

[node name="Label6" type="Label" parent="GameOver/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.494118, 0.494118, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "spirits today."

[node name="Label2" type="Label" parent="GameOver/Control/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.494118, 0.494118, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Try for more tomorrow!"

[connection signal="change_floors" from="Floors" to="CanvasLayer/Control/Minimap" method="change_floor_to"]
[connection signal="change_floors" from="Floors" to="Player Character/Camera2D" method="_on_floors_change_floors"]
[connection signal="change_floor_to" from="Elevator" to="Floors" method="change_floor_to"]
[connection signal="dialog_opened_closed" from="Elevator" to="Player Character" method="freeze"]
[connection signal="day_over" from="WorkDayController" to="GameOver" method="_on_game_over"]
[connection signal="new_work_order" from="WorkDayController" to="CanvasLayer/Important Info Ticker" method="show_info"]
[connection signal="timeout" from="WorkDayController/ActivationTimer" to="WorkDayController" method="_on_activation_timer_timeout"]
[connection signal="animation_finished" from="WorkDayController/DifficultyAndTimeCurves" to="WorkDayController" method="_on_difficulty_anim"]
